src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateTriggersInButton.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies that an accurate error is reported when a ControlTemplate.Triggers property is defined inside a Button.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateTriggersInButton.xaml $
********************************************************************/
-->
<StackPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 

    <Button>
        <ControlTemplate.Triggers>
            <!-- -->
        </ControlTemplate.Triggers>
    </Button>

</StackPanel>
</Page>
